--- a/README.Rmd
+++ b/README.Rmd
@@ -1,13 +1,24 @@
+---
+output: github_document
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "man/figures/README-",
+  out.width = "100%"
+)
+```
 
 # lineaR
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of lineaR is to provide a simple interface for working with
-data from linear.app in R.
+The goal of lineaR is to provide a simple interface for working with data from linear.app in R. 
 
 ## Installation
 
@@ -21,7 +32,7 @@ devtools::install_github("Presage-Group/lineaR")
 
 This is a basic example which shows you how to solve a common problem:
 
-``` r
+```{r example}
 library(lineaR)
 ## basic example code
 ```
